# dotfiles

./: .gitignore  .gitmodules  .pubsrc  .todo  README.txt  setup.sh  setup_bin.sh  vimrc  vimrc.bak
AutoHotKey/: CapsLockVim.ahk
alacritty/: alacritty.yml
bash/: bash_aliases  bashrc  djvu2pdf.sh  install.sh  setup.sh  taskd.service
dunst/: dunstrc
gaming/: Mouse Profiles.xml  autoexec_cs_go.cfg  autoexec_dota.cfg
git/: gitconfig  readme.md
installs/: vim  xmonad  zsh
khal/: config
khard/: khard.conf
kitty/: kitty.conf
latex/: .latexmkrc  anishs.sty  macros.tex  preemble.tex  setup.sh  texstudio.txsprofile
neofetch/: config.conf
networkmanager/: config.ini
nixos/: configuration-geralt.nix  configuration-laptop.nix  configuration-vesemir.nix  configuration-wsl.nix  configuration-ziraeal.nix  configuration.nix  cur.nix  defaults.nix  desktop.nix  dotfiles.nix  grub.nix  nvidia.nix
nvim/: config  core  ftdetect  ftplugin  init.vim  init.vim.bak  ultisnips
picom/: picom.conf
pubs/: pubsrc
ranger/: commands.py  rc.conf
rofi/: config.rasi
rtorrent/: rtorrent.rc  rtorrent.rc.server  rtorrent.server.rc  rtorrent.service  rtorrent.service.daemon  rtorrent.service.server  (+1 more)
xmobar/: default.nix  hie.yaml  my-xmobar.cabal  shell.nix  xmobar-anish.cabal  xmobar-desktop.hs  xmobar-geralt.hs  xmobar-laptop.hs  xmobar-secondary.hs  xmobar-vesemir.hs  xmobar-ziraeal.hs
xmobar/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
xmobar/scripts/: helper.sh  internet.sh  trayer_padding_icon.sh
(+394 files in other folders)
