name:                my-xmobar
version:             0.1
description:         my xmobar
author:              Anish Sevekari
build-type:          Simple
cabal-version:       >=1.10

executable xmobar
  main-is:             xmobar.hs
  build-depends:       base, xmobar
  default-language:    Haskell2010
