name:                xmobar-anish
version:             1.0
description:         xmobar tweaked by anish sevekari
author:              Anish Sevekari
build-type:          Simple
cabal-version:       >=1.10

executable xmobar
  main-is:             xmobar.hs
  build-depends:       base, xmobar
  default-language:    Haskell2010
